add 2 routes for exporting
